Added Profile, Synchronisation in controllers/spotify.js
