# api/controllers/middleware.js
@@ -12,7 +12,7 @@
 
 const jwt = require("jsonwebtoken");
 
-verify = (req, res, next) => {
+const verify = (req, res, next) => {
     /* 
         #swagger.security = [{
             "bearerAuth": []
@@ -31,31 +31,6 @@ verify = (req, res, next) => {
     jwt.verify(token, process.env.JWT_SECRET, (err, payload) => {
         if(err)
             return res.status(403).json("Le token d'accès est invalide. Le format suivant doit être respecté : Bearer <access-token>.");
-        
-        req.user = payload;
-        next();
-    })
-}
-
-verifySpotify = (req, res, next) => {
-    /* 
-        #swagger.security = [{
-            "bearerSpotify": []
-        }] 
-        #swagger.responses[401] = { description: "Vous n'êtes pas authentifié(e) à Spotify." } 
-        #swagger.responses[403] = { description: "Le token Spotify est invalide." } 
-    */
-    const authHeader = req.headers.authorization;
-
-    // ❌ No 'Authorization' header :
-    if(!authHeader)
-        return res.status(401).json("Vous n'êtes pas authentifié(e).");
-
-    const token = authHeader.split(' ')[1];     // authHeader.split(' ')[0] == 'Bearer'
-
-    jwt.verify(token, process.env.JWT_SECRET, (err, payload) => {
-        if(err)
-            return res.status(403).json("Le token d'accès est invalide.\nLe format suivant doit être respecté : Bearer <access-token>.");
         
         req.user = payload;
         next();
