# api/routes/spotify.js
@@ -2,16 +2,12 @@ const router = require("express").Router();
 const spotifyController = require("../controllers/spotify.js");
 const middleWare = require('../controllers/middleware.js')
 
-router.get("/refresh_token", spotifyController.refreshToken);
 router.get("/callback", spotifyController.callback);
 router.get("/link", middleWare.verify ,spotifyController.link);
+router.get("/me", middleWare.verify ,spotifyController.profile);
+router.put("/sync", middleWare.verify, spotifyController.synchronisation);
 
 module.exports = router
-
-// ENDPOINT : /api/spotify/refresh_token
-// USAGE : Mise à jour du Acess_Token de Spotify
-// METHOD : [get]
-// Parameters : query.refresh_token => Le refresh Token de Spotify
 
 // ENDPOINT : /api/spotify/callback
 // USAGE : Route de retour pour la connexion à Spotify
