# api/swagger.json
@@ -198,25 +198,6 @@
         ]
       }
     },
-    "/api/spotify/refresh_token": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "refresh_token",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/api/spotify/callback": {
       "get": {
         "description": "",
@@ -259,6 +240,74 @@
         "responses": {
           "200": {
             "description": "Requête valide. Connectez-vous à Spotify."
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Vous n'êtes pas authentifié(e)."
+          },
+          "403": {
+            "description": "Le token est invalide."
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/api/spotify/me": {
+      "get": {
+        "summary": "Afficher la personnalité de l'utilisateur Spotify (FT-6)",
+        "description": "Affiche la personnalité de l'utilisateur en fonction de ses titres likés sur Spotify.",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Portrait généré avec succès."
+          },
+          "401": {
+            "description": "Vous n'êtes pas authentifié(e)."
+          },
+          "403": {
+            "description": "Le token est invalide."
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/api/spotify/sync": {
+      "put": {
+        "summary": "Synchronisation (FT-7)",
+        "description": "Synchronise la lecture d'un chef de groupe avec celles des autres utilisateurs.",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Synchronisation effectuée avec succès."
+          },
+          "204": {
+            "description": "L'appareil d'écoute n'est pas actif."
           },
           "400": {
             "description": "Bad Request"
